--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link rel="stylesheet" href="style.css">
+</head>
 <body>
 <div class="overlay"></div>
 <div class="stars" aria-hidden="true"></div>
